<resources>
    <string name="app_name">Quero Doar</string>
    <string name="title_home">Início</string>
    <string name="title_notifications">Notificações</string>
    <string name="title_favorite">Favoritos</string>
    <string name="tittle_donation">Doações</string>
    <string name="notification_list_item_content_default">A ONG que você apoia “Lar dos gatos” adicionou um novo evento: Feira de Adoção em 04/07.</string>
    <string name="notification_list_item_datereceived_default">00:00 00/00/0000</string>
    <string name="ong_image_description">ONG Image</string>
    <string name="ong_name">ONG Amapatas</string>
    <string name="ong_value">Valor: R$ 10,00 por mês</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="em_alta">Em Alta</string>
    <string name="doacao_para">Doação Para</string>
    <string name="recentes">Recentes</string>
    <string name="doacao_resumo">Resumo da Doação</string>
    <string name="valor_doacao">Valor da Doação</string>
    <string name="tipo_doacao">Tipo de Doação</string>
    <string name="forma_pagamento">Forma de Pagamento</string>
    <string name="cartao_de_debito">Cartão de Debito</string>
    <string name="cartao_de_credito">Cartão de Credito</string>
    <string name="doacao_isolada">Isolada</string>
    <string name="doacao_recorrente">Recorrente</string>
    <string name="insira_o_valor_a_ser_doado">Insira o valor a ser doado</string>
    <string-array name="tipo_doacao_values">
        <item>Recorrente</item>
        <item>Isolada</item>
    </string-array>

</resources>