<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmDonate"
    android:padding="10dp">

    <TextView
        android:id="@+id/doacao_para_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/doacao_para"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/ong_recebedora_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/doacao_para_label"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="90">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:id="@+id/doacao_resumo_label"
            app:layout_constraintTop_toBottomOf="@id/ong_recebedora_fragment_container"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/doacao_resumo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/valor_doacao_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/valor_doacao"
            android:textColor="@color/Black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doacao_resumo_label" />

        <EditText
            android:id="@+id/edit_valor_doacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/insira_o_valor_a_ser_doado"
            android:inputType="numberDecimal"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valor_doacao_label" />

        <TextView
            android:id="@+id/tipo_doacao_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/tipo_doacao"
            android:textColor="@color/Black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_valor_doacao" />

        <RadioButton
            android:id="@+id/doacaoRecorrenteRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/doacao_recorrente"
            app:layout_constraintStart_toStartOf="@+id/tipo_doacao_label"
            app:layout_constraintTop_toBottomOf="@+id/tipo_doacao_label" />

        <RadioButton
            android:id="@+id/doacaoIsoladaRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/doacao_isolada"
            app:layout_constraintStart_toStartOf="@+id/tipo_doacao_label"
            app:layout_constraintTop_toBottomOf="@+id/doacaoRecorrenteRadioButton" />

        <TextView
            android:id="@+id/forma_pagamento_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/forma_pagamento"
            android:textColor="@color/Black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doacaoIsoladaRadioButton" />

        <RadioButton
            android:id="@+id/CartaoDeCreditoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/cartao_de_credito"
            app:layout_constraintStart_toStartOf="@+id/forma_pagamento_label"
            app:layout_constraintTop_toBottomOf="@+id/forma_pagamento_label" />

        <RadioButton
            android:id="@+id/CartaoDeDebitoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/cartao_de_debito"
            app:layout_constraintStart_toStartOf="@+id/forma_pagamento_label"
            app:layout_constraintTop_toBottomOf="@+id/CartaoDeCreditoRadioButton" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>