4?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="226dp"
    android:layout_height="179dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:strokeColor="@color/black"
    app:strokeWidth="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="103dp"
            app:srcCompat="@mipmap/ic_ong_foreground"
            android:scaleType="centerCrop"
            android:contentDescription="@string/ong_image_description"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="vertical"
            android:padding="15dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/ong_list_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ong_name"
                android:textSize="16dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />
            <TextView
                android:id="@+id/ong_list_item_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ong_value"
                android:textSize="14dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>